--- a/final/rf_lab_final2.tex
+++ b/final/rf_lab_final2.tex
@@ -122,7 +122,7 @@
 		\textbf{Group 3:} 	& \\
 		Sampo Salo			& 79543L	\\
 		Tuomas Leinonen 	& 84695P	\\
-		Huy Nguyen			& 411330		
+		Nguyen Pham Quang Huy			& 411330		
 	\end{tabular}
 }
 
