--- a/final/rf_lab_final2.tex
+++ b/final/rf_lab_final2.tex
@@ -464,9 +464,8 @@ The four measurement data were post-processed either by MATLAB or by means of ca
 
 	\vspace*{-12pt}
 \end{table}
-
+\noindent
 The parameters of the amplifier used in the noise measurement, which were used in noise temperature calculation below, were specified as follows: G = 19 dB, T = 463 K, F = 4.1 dB.
-\\
 
 In the last subsection, the dynamic range of the RX pre-amplifier under test was calculated based on both measured parameters and provided parameters from producers. The comparison between those were also discussed.
 
@@ -474,15 +473,15 @@ In the last subsection, the dynamic range of the RX pre-amplifier under test was
 \subsection{1~dB compression point}
 
 \noindent
-1 dB compression point arises from the nonlinearities of the receiver LNA. At high enough powers, the gain of the LNA for a certain frequency starts to drop with increasing power. The input power at which the LNA gain is compressed by 1 dB was measured using two different measurement setups.
+1 dB compression point arises from the nonlinearities of the receiver LNA. At high enough powers, the gain of the LNA for a certain frequency starts to drop with increasing power. The input power at which the LNA gain is compressed by 1 dB was measured using two different measurement setups. The results are presented here.
 
-The first measurement setup consisted of a signal generator and a spectrum analyser. With this setup, a single frequency of 900 MHz sent from the signal generator was measured with the spectrum analyser. The signal generator power was increased gradually, until a -1 dB drop in the gain was achieved. The measurement results for the first setup are presented in figures 9 a (original data), c, and e, for which the attenuations of the cables are taken into account.
+The first measurement setup consisted of a signal generator and a spectrum analyser. A single frequency of 900 MHz sent from the signal generator was measured with the spectrum analyser. The signal generator power was increased gradually, until a 1 dB drop in the gain was achieved. The measurement results for the first setup are presented in figures 9 a (original data), c, and e, for which the attenuations of the cables are taken into account.
 
-The second measurement setup consisted of a vector network analyser. The VNA was measuring the S21 –parameter as the input power was increased gradually, until a -1 dB drop was visible in the S21 -parameter. An attenuator was required in between the base station and VNA port 2 to protect the device from the amplified signal. The measurement results for the second setup are presented in figures 9 b, d (original data), and f. The vector network analyser was calibrated before use. 
+The second measurement setup consisted of a vector network analyser. The VNA was measuring the S21 –parameter as the input power was increased gradually, until a 1 dB drop was visible in the S21 -parameter. An attenuator was required in between the base station and VNA port 2 to protect the device from the amplified signal. The measurement results for the second setup are presented in figures 9 b, d (original data), and f. The vector network analyser was calibrated before use. 
 
-All the subfigures are plotted from one data set for spectrum analyser setup and VNA setup each. The data sets are post processed using Matlab. Both data sets are visualised with three different figures, so that it is easier to compare the two measurements. The extrapolated sections are plotted only for eye candy, and they should not be taken into account when analysing the RX block performance.
+All the sub figures are plotted from one data set for spectrum analyser setup and VNA setup each. The data sets are post processed using Matlab. Both data sets are visualised with three different figures, so that it is easier to compare the two measurements. The extrapolated sections are plotted only for eye candy, and they should not be taken into account when analysing the DDU performance.
 
-The compression point derived from the spectrum analyser measurement is $CP_a = -5.6$~dBm. Figure 9 c shows how the measured gain fluctuates around the average gain of 24.6 dB, however, with a small amplitude. The compression point derived from the VNA measurement is $CP_b = -4.1$~dBm without gain fluctuation.
+The compression point derived from the spectrum analyser measurement is $CP_a = -5.6$~dBm. Figure 9 c shows how the measured gain fluctuates around the average gain of 24.6 dB, however, with a small amplitude. The compression point derived from the VNA measurement is $CP_b = -4.1$~dBm withou any gain fluctuation.
 
 
 \begin{figure}
@@ -563,12 +562,12 @@ and yields $T_{\mathrm{DDU, w}} = 142.4$~K and $T_{\mathrm{DDU, wo}} = 612.1$~K 
 	\vspace*{-12pt}
 \end{table}
 
-\noindent
-The final results are presented in table (1). The results differ significantly. The noise temperature calculated from the LNA setup is clearly closer to reality, than the result obtained without the LNA. The reason for this is that the noise power is situated lower than the actual noise floor of the spectrum analyser. The LNA is required in the setup to rise the noise level high enough, so that it can be defined more precisely with the spectrum analyser.
+
+The final results are presented in table (1). The results differ significantly. The noise temperature calculated from the LNA setup is clearly closer to reality than the result obtained without the LNA. The reason for this is that the noise power is situated lower than the actual noise floor of the spectrum analyser. The LNA is required in the setup to rise the noise level high enough, so that it can be defined more precisely with the spectrum analyser.
 
 \subsection{Sensitivity}
 
-In this measurement, the sensitivity or the minimum detectable input power of the RX pre-amp block was measured using SA. The noise level at the output of the block was measured, when the RF power from SG was completely turned off, to be at \textbf{$-101.89$~dBm}. Three different output SNR values of the block, the minimum SNR from GSM standard, below GSM minimum standard and above GSM minimum standard, were used to calculate desired power level at the output side. Input power levels from SG were written down when the desired output powers were reached. The Table \ref{t:sens} below summarizes the measurement data for the minimum detectable input power at different values of SNR.
+In this measurement, the sensitivity or the minimum detectable input power of the RX pre-amp block was measured using SA. The noise level at the output of the block was measured, when the RF power from SG was completely turned off, to be at $-101.89$~dBm. Three different output SNR values of the block, the minimum SNR from GSM standard, below GSM minimum standard and above GSM minimum standard, were used to calculate desired power level at the output side. Input power levels from SG were written down when the desired output powers were reached. The Table \ref{t:sens} below summarizes the measurement data for the minimum detectable input power at different values of SNR.
 
 \begin{table}[!h]
 	\begin{center}
@@ -586,7 +585,7 @@ In this measurement, the sensitivity or the minimum detectable input power of th
 	\vspace*{-12pt}
 \end{table}
 
-It can be seen that at the minimum SNR required from GSM standard (around 10 dB) the measured sensitivity of the RX pre-amp block is $-115.6$~dBm. Taking into account the attenuations caused by SMA-cables, which were measured in the first task), the actual sensitivity is \textbf{$\textbf{-116.1}$~dBm} (=$-115.6\mathrm{\;dBm} - 0.2\mathrm{\;dBm} - 0.3\mathrm{\;dBm}$). In comparison with the sensitivity specified by producer ($-112.5$~dBm), the measured value is $-3.6$~dB lower than the given one from producer.
+It can be seen that at the minimum SNR required from GSM standard (around 10 dB) the measured sensitivity of the RX pre-amp block is $-115.6$~dBm. Taking into account the attenuations caused by SMA-cables, which were measured in the first task, the actual sensitivity is $-116.1$~dBm (=$-115.6\mathrm{\;dBm} - 0.2\mathrm{\;dBm} - 0.3\mathrm{\;dBm}$). In comparison with the sensitivity specified by producer ($-112.5$~dBm), the measured value is $-3.6$~dB lower.
 
 \subsection{Dynamic range}
 
@@ -703,16 +702,28 @@ See lecture handout supplement.
 \newpage
 \section{Conclusions}
 
+How is the device performing compared to standards?
+\\
+
 In this laboratory assignment, the receiver part of a GSM base station was measured. The measurements covered the most important performance parameters of a receiver part, including 1-dB compression point, frequency response, noise temperature, and sensitivity. The most important learning outcome was to understand high and low power measurements, and how a power level affects measurements. Sensitivity and noise measurements require very low power measurements, whereas 1-dB compression point demonstrates the effects of high powers. This report presented the measurement setups and their corresponding results.
 
-The 1-dB compression point was measured with two different measurements. The first was done using a signal generator and a spectrum analyser, and the second was done using only a VNA. In a nutshell, the input power was gradually increased, and the output power measured. In this report, figures were presented from which it was possible to define the 1-dB compression point. The compression point defined with the first setup is $CP_a = -5.6 \pm 1.5$~dBm, and the second setup gave a compression point of $CP_b = -4.1 \pm 0.2$~dBm, with the given error estimations.
+The main measurement instruments included a spectrum analyser, a vector network analyser, and a signal generator, which all were pre calibrated and ready to use. An attenuator and a low noise amplifier were used to transform the measured signals to proper levels. In addition, different connecting cables were used, and their attenuations defined with the VNA. Measurement uncertainties for the spectrum analyser and VNA are estimated to be approximately $\pm1.5$~dB and $\pm0.3$~dB, respectively.
 
-The frequency response was already defined in the previous laboratory assignment. 
+The 1-dB compression point was measured with two different measurements. The first was done using a signal generator and a spectrum analyser, and the second was done using only a VNA. In a nutshell, the input power was gradually increased, and the output power measured. In this report, figures are presented from which it is possible to define the 1-dB compression point. The compression point defined with the first setup is $CP_a = -5.6 \pm 1.5$~dBm and the second setup gives a compression point of $CP_b = -4.1 \pm 0.3$~dBm, with the given error estimations.
 
-The main measurement instruments included a spectrum analyser, a vector network analyser, and a signal generator, which all were pre calibrated and ready to use. An attenuator and a low noise amplifier were used to transform the measured signals to proper levels. In addition, different connecting cables were used, and their attenuations defined with the VNA.
+The frequency response was already defined in the previous laboratory assignment. The S21 parameter of the RX block was measured with a VNA. The $3$~dB and noise bandwidths were defined from the obtained graph, yielding $40.6$~MHz and $38.1$~MHz, respectively. However, the difference between these two values is small. Therefore, it is concluded that the $3$~dB bandwidth may be used as the noise bandwidth as well, thus avoiding too optimistic measurement results.
+\\
 
+noise temperature
+\\
 
+The minimum detectable power of the RX pre-amp block was measured using the spectrum amplifier, and compared to the GSM standard.
+\\
 
+dynamic range
+\\
+
+conclusion
 
 \newpage
 \section{Feedback}
