Feedback finished. Diode error and endcheck missing

--- a/final/rf_lab_final2.tex
+++ b/final/rf_lab_final2.tex
@@ -709,11 +709,9 @@ In conclusion, the receiver block parameters were measured, and a good deal of n
 
 The second laboratory assignment was a good practical example of how power levels affect measurements. In addition, it was interesting to learn how noise measurements may be conducted. However, there were some drawbacks as well.
 
-When writing the preliminary report, we were left wondering if all the needed devices were really listed in the instructions sheet. In the noise measurements, the LNA was definitely required, but not listed.
+When writing the preliminary report, we were left wondering if all the needed devices were really listed in the instructions sheet. In the noise measurements, the LNA was definitely required, but not listed. Feedback for all the reports would also be welcome, as a grade does not tell the pluses and minuses of a report. What was especially good? What could have been better? Any wrong thoughts or deductions? After all, learning process depends very much on "learning from mistakes". Also, there was the question on sweep time. Not the assistant nor the lecturer could not thoroughly explain for example how it affects measurements.
 
-Feedback for all the reports would also be welcome, as a grade does not tell the pluses and minuses of a report. What was especially good? What could have been better? Anu wrong thoughts or deductions?
-
-(not all devices are listed in the instructions sheet, learning from feedback, sweeptime)
+The assistant was very helpful and ready to answer questions. For example, when we asked for some equipment that would not normally be used in the lab, he brought them immediately. In addition, the assistant had taken our feedback from the previous lab into account, and improved the measurement setup.
 
 \newpage
 \begin{thebibliography}{9}%\itemsep 7pt\parskip -5pt 
